Prevent navbar items from wrapping below navbar

--- a/static/custom_dc/custom/style.css
+++ b/static/custom_dc/custom/style.css
@@ -166,7 +166,7 @@ h6,
   margin-right: 20px;
 }
 
-@media (max-width:565px) {
+@media (max-width:620px) {
   .navbar-items {
     display: none
   }
